@@ -36,7 +36,6 @@ import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -255,15 +254,13 @@ public class EcoNewsCommentServiceImpl implements EcoNewsCommentService {
      * {@inheritDoc}
      */
     @Override
-    @Transactional
+    @Transactional(readOnly = true)
     public void searchUsers(UserSearchDto searchUsers) {
-        List<User> users = searchUsers.getSearchQuery() == null ? userRepo.findAll()
-            : userRepo.searchUsers(searchUsers.getSearchQuery());
+        List<User> users = userRepo.searchUsers(searchUsers.getSearchQuery());
 
         List<UserTagDto> usersToTag = users.stream()
             .map(u -> modelMapper.map(u, UserTagDto.class))
-            .limit(10)
-            .collect(Collectors.toList());
+            .toList();
 
         messagingTemplate.convertAndSend("/topic/" + searchUsers.getCurrentUserId() + "/searchUsers", usersToTag);
     }
